--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-PORT=5000
-MONGO_URI=mongodb://localhost:27017/ticketing
+const uri = "mongodb+srv://jmjmjmj160:connectedisme1234@ticketing.zwifasy.mongodb.net/?retryWrites=true&w=majority&appName=ticketing";
